# ComfyUI-BGPSeg

./: README.md  __init__.py  pyproject.toml  requirements.txt
nodes/: __init__.py  bgpseg_nodes.py
utils/: __init__.py  model_loader.py
utils/bgpseg/: __init__.py  inference.py  mean_shift.py  model.py
utils/bgpseg/cuda_ops/: __init__.py  boundaryops_wrapper.py  pointops_wrapper.py
utils/shared/: __init__.py  occ_logging.py
workflows/: bgpseg.json
