[project]
name = "comfyui-bgpseg"
description = "THIS NODE IS WIP. BGPSeg: Boundary-Guided Primitive Segmentation, originally from ComfyUI-CADabra."
version = "1.0.0"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-BGPSeg"
"Original Project" = "https://github.com/PozzettiAndrea/ComfyUI-CADabra"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "BGPSeg"
Icon = ""
